--- a/harriet.html
+++ b/harriet.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, my name is</title>
+        <title>Hello, my name is Harriet</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -31,18 +31,18 @@
                     <p class="meta one">Hyun Joo Cho</p>
                     <p class="meta two">Harriet Cho</p>
                 </div>
-                <img class="downs" id="down" src="images/scroll-down.gif"> 
-                <img class="downs" id="down2" src="images/scroll-down.gif"> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to1">
                 <div class="content">
-                    <p class="helvetica">I decided to go by __________ because ___________________________________<br>____________________________________________________________________________________________________________.</p>
+                    <p class="helvetica">I decided to go by __________ because ___________________________________<br>_________________________________________________________________________________________________.</p>
                     <p class="meta four">Harriet</p>
-                    <p class="meta five">people had issues</p>
-                    <p class="meta-2 six">pronouncing my given name correctly, so I became annoyed and got a supplementary name</p>
+                    <p class="meta five">people had issues pronounc-</p>
+                    <p class="meta-2 six">ing my given name correctly, so I became annoyed and got a supplementary name</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to2">
                 <div class="content">
                     <p class="helvetica">My legal name was given by _______________, and they named me after _________.</p>
                     <p class="helvetica">My name  does / does not  have a cultural background, and the cultural background of my name is __________. <!-- Cultural background of my name is ______________. --></p>
@@ -54,16 +54,18 @@
                     <img class="circle" src="images/circle.png">
                     <p class="meta fourteen">Korean</p>
                     <p class="meta twelve">Hyun Joo</p>
-                    <p class="meta thirteen">“wise” and “pearl”</p>                    
+                    <p class="meta thirteen">“wise” and “pearl”</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: ____________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">It’s hard to explain, but I basically feel like being another person when called Harriet instead of Hyunjoo. So to me, being called by my real name means being treated as my original self</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page longer-1">
+            <div class="page" id="scroll-to4">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
                 <div class="content" id="container">
 
@@ -72,15 +74,17 @@
                     <br>
                     <br>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
                 <!-- <img class="arrows" id="hover2" src="images/down.png">    -->
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to5">
                 <div class="content">
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ______________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">Any time a foreign person pronounced my name wrong. I didn’t really become friends with any of those people</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to6">
                 <div class="content">
                     <p class="helvetica">This is the story behind my name. What's your name?</p>
                     <a href="newStory.html"><p class="meta addStoryButton">Add your story</p></a>
