--- a/maddy.html
+++ b/maddy.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, my name is</title>
+        <title>Hello, my name is Maddy</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -31,18 +31,18 @@
                     <p class="meta one">Madeline Barbara Mueller</p>
                     <p class="meta two">Maddy Mueller</p>
                 </div>
-                <img class="downs" id="down" src="images/scroll-down.gif"> 
-                <img class="downs" id="down2" src="images/scroll-down.gif"> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to1">
                 <div class="content">
                     <p class="helvetica">I decided to go by __________ because ___________________________________<br>_________________________________________________________.</p>
                     <p class="meta four">Maddy</p>
                     <p class="meta five">it is the nickname my parents</p>
                     <p class="meta three">gave me—I have never been called anything else</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to2">
                 <img class="arrows" id="hover" src="images/up.png">
                 <div class="content" id="container">
                     <p class="helvetica">My legal name was given by _______________, and they named me ___________ because _______________________________________________________________<br>______________________________________________________________________________.</p>
@@ -58,29 +58,34 @@
                     <img class="circle" src="images/circle.png">
                 </div>
                 <img class="arrows" id="hover2" src="images/down.png">
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
-                <div class="content">
+            <div class="page" id="scroll-to3">
+                <img class="arrows" id="hover3" src="images/up.png">
+                <div class="content" id="container2">
                     <p class="helvetica">This is how my name influences my identity: ____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">I've always been one of 10 Maddy/ie/i's in every class so it's usually pointed out in the context of how weird and funny it is that there are so many Maddys. I guess it makes me a think a little bit about whether I stand out among such a large group of people with my name, and it's also the reason I get a little irritated about people constantly spelling it wrong and confusing me with other people, but those are honestly pretty insignificant problems to have. Otherwise it's entwined with my identity on a super base level because it's my name and I can't imagine having a different name</p>
                 </div>
+                <img class="arrows" id="hover4" src="images/down.png">
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page longer-1">
+            <div class="page" id="scroll-to4">
                 <div class="content">
-
                     <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: _________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">One of my best friends in college is named Maddie and we were put together in a dorm freshman year, are in the same major, both have red hair, and have a lot of other spooky sim-ilarities. I think our name helped bring us together</p>
                     <br>
                     <br>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to5">
                 <div class="content">
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ____________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">My name is constantly being misspelled and I'm always being mistaken for other Maddy/ie/i's, so that can be a little irrita-ting</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to6">
                 <div class="content">
                     <p class="helvetica">This is the story behind my name. What's your name?</p>
                     <a href="newStory.html"><p class="meta addStoryButton">Add your story</p></a>
