--- a/maggie.html
+++ b/maggie.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, my name is</title>
+        <title>Hello, my name is Maggie</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -32,18 +32,18 @@
                     <p class="meta two">Maggie</p>
                     <p class="meta three">Chuang</p>
                 </div>
-                <img class="downs" id="down" src="images/scroll-down.gif"> 
-                <img class="downs" id="down2" src="images/scroll-down.gif"> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to1">
                 <div class="content">
                     <p class="helvetica">I decided to go by __________ because ___________________________________<br>_____________________________________________________________________________________________________.</p>
                     <p class="meta four">Maggie</p>
                     <p class="meta five">I've just never needed to</p>
                     <p class="meta-2 six">change it for anything. I generally like my name and have been comfortable with it</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to2">
                 <img class="arrows" id="hover" src="images/up.png">
                 <div class="content" id="container">
                     <p class="helvetica">My legal name was given by _______________, and they named me after ____________________________________________.</p>
@@ -56,17 +56,19 @@
                     <img class="circle" src="images/circle.png">
                     <p class="meta fourteen">I think it ties </p>
                     <p class="meta fifteen">back to my mom's distant Irish heritage</p>
-                    <p class="meta-2 twelve">I don't know the literal meaning, but my first name has been passed down for generations on my mom's side. I know my last name is an adapted version of "zhuang", which means village in Taiwanese <br><br></p>                    
+                    <p class="meta-2 twelve">I don't know the literal meaning, but my first name has been passed down for generations on my mom's side. I know my last name is an adapted version of "zhuang", which means village in Taiwanese <br><br></p>                  
                 </div>
-                <img class="arrows" id="hover2" src="images/down.png"> 
+                <img class="arrows" id="hover2" src="images/down.png">
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: _______________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">My name is very representative of the fact that I'm biracial, since each part specifically comes from my mom and dad's sides. It also drew a lot of attention in my primarily-white high school, so I own my name with a lot of pride</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page longer-1">
+            <div class="page" id="scroll-to4">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
                 <div class="content" id="container">
 
@@ -75,15 +77,17 @@
                     <br>
                     <br>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
                 <!-- <img class="arrows" id="hover2" src="images/down.png">    -->
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to5">
                 <div class="content">
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: _____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">Generally, every teacher I had couldn't say my last name. Lots of friends couldn't say it either—one time, when I tried to teach a group how to pronounce it, they quickly devolved into just yelling ching/chang/chung/chong/whatever other racist-sounding asian words they could think of</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to6">
                 <div class="content">
                     <p class="helvetica">This is the story behind my name. What's your name?</p>
                     <a href="newStory.html"><p class="meta addStoryButton">Add your story</p></a>
