--- a/tony.html
+++ b/tony.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, my name is</title>
+        <title>Hello, my name is Tony</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -32,18 +32,18 @@
                     <p class="meta two">Tony Huerta-Apanco</p>
                     <p class="meta three">Antonio, Mijo, or Chamaco</p>
                 </div>
-                <img class="downs" id="down" src="images/scroll-down.gif"> 
-                <img class="downs" id="down2" src="images/scroll-down.gif"> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to1">
                 <div class="content">
                     <p class="helvetica">I decided to go by _______ because ______________________________________<br>______________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta four">Tony</p>
                     <p class="meta five">at a young age, my nickname </p>
                     <p class="meta-2 six">was always what people called me. Anthony is too long to say so the nickname was efficient, especially in a sports setting. I came to not like my full name because I always believe that whoever is calling me it, is upset with me</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to2">
                 <div class="content">
                     <p class="helvetica">My legal name was given by _______________, and they named me after _____<br>_______________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="helvetica">My name  does / does not  have a cultural background. <!-- Cultural background of my name is ______________. --></p>
@@ -53,14 +53,16 @@
                     <p class="meta-2 six">mother’s favorite singer, Marco Antonio Solis. But since I was born in the United States my parents wanted to give me an “English” name so they chose “Anthony.”</p>
                     <img class="circle" src="images/circle.png">
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: __________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">I would like to believe that my name influences my identity. Anthony; to me, seems too formal or serious and I believe that Tony showcases the individual that I am today</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to4">
                 <img class="arrows" id="hover" src="images/up.png">
                 <div class="content" id="container">
                     <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: _____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
@@ -69,14 +71,16 @@
                     <br>
                 </div>
                 <img class="arrows" id="hover2" src="images/down.png"> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to5">
                 <div class="content">
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">My last name is more of a problem here. Due to the pronunciation, many people cannot say it right so there have been plenty of times (more in the elementary setting) where certain individuals would mock my name and called me things that sounded fairly similar to my last name. (Example: “A pine cone” rather than Apanco)</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to6">
                 <div class="content">
                     <p class="helvetica">This is the story behind my name. What's your name?</p>
                     <a href="newStory.html"><p class="meta addStoryButton">Add your story</p></a>
