--- a/ayanna.html
+++ b/ayanna.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, my name is</title>
+        <title>Hello, my name is Ayanna</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -31,17 +31,19 @@
                     <p class="meta one">Ayanna Denise Harrison</p>
                     <p class="meta two">Ayanna Harrison</p>
                 </div>
-                <img class="downs" id="down" src="images/scroll-down.gif"> 
-                <img class="downs" id="down2" src="images/scroll-down.gif"> 
+                <!-- <img class="downs" id="down" src="images/scroll-down.gif" onClick="document.getElementById('scroll-to').scrollIntoView();"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif" onClick="document.getElementById('scroll-to').scrollIntoView();">  -->
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to1">
                 <div class="content">
                     <p class="helvetica">I decided to go by __________ because __________________________________.</p>
                     <p class="meta four">Ayanna</p>
                     <p class="meta five">I stuck with what I was given</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to2">
                 <div class="content">
                     <p class="helvetica">My legal name was given by _______________, and they named me ___________ because _______________________________________________________________<br>___________________________________________________________________________________________.</p>
                     <p class="helvetica">My name  does / does not  have a cultural background. <!-- Cultural background of my name is ______________. --></p>
@@ -55,14 +57,16 @@
                     <p class="meta thirteen">beautiful flower in Amharic</p>
                     <img class="circle" src="images/circle.png">
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: __________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">It’s nice to have a really black name, so I can be reminded of who I am and what I’m about</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page longer-1">
+            <div class="page longer-1" id="scroll-to4">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
                 <div class="content" id="container">
 
@@ -71,15 +75,17 @@
                     <br>
                     <br>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down5" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
                 <!-- <img class="arrows" id="hover2" src="images/down.png">    -->
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to5">
                 <div class="content">
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: _________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">I can’t think of any except when people act like they can’t pronounce it just by reading. It’s pretty straight forward</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to6">
                 <div class="content">
                     <p class="helvetica">This is the story behind my name. What's your name?</p>
                     <a href="newStory.html"><p class="meta addStoryButton">Add your story</p></a>
