--- a/intro-page.html
+++ b/intro-page.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, my name is</title>
+        <title>Hello, my name is OnYou</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -13,18 +13,28 @@
         	<div class="intro-page">
                 <div class="header">
                     <a href="archive.html"><img class="logo-resize" src="images/logo.png"></a>
-                    <input class="inputBox helvetica" type="text" id="fname" name="firstname" placeholder="OnYou">
+                    <div class="cont" style="width: 20vw; display: inline-block;">
+                        <div align="center">
+                            <input type="text" name="search" id="search" placeholder="OnYou" class="form-control searchBox" autocomplete="off" readonly="readonly" />
+                        </div>
+                        <ul class="list-group helvetica-2" id="result"></ul>
+                    </div>
                     <a href="intro-page.html"><p class="about">about</p></a>
                 </div>
                 <div class="questions">
-                    <p class="myStory meta"><span class="myStory-span">Hi, my name is OnYou and yes, it's my real name. </span></p><br>
-                    <p class="myStory meta">OnYou in Korean means warm and soft, and it also has biblical context as 'OnYou' is an adjective that is only used in the Bible in Korea. So growing up, I always took pride in my name and since it is a very unique name in Korean as well, I got a compliment on my name pretty often.</p>
+                    <p class="myStory meta myStory-span">Hi, my name is OnYou and yes, it's my real name.</p><br>
+                    <p class="myStory meta myStory-italics">For people who have not had a chance to think from a perspective of a person whose name is a big part of their identity, I hope this project serves as an opportunity to see from other individuals’ perspectives. For others, I hope this project serves as an opportunity to realize the value of their names and think about what your name means to you.</p>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <p class="myStory meta">OnYou in Korean means warm and soft, and it also has biblical context as 'OnYou' is an adjective that is only used in the Bible in Korea. So growing up, I always took pride in my name and since it is a very unique name in Korean as well, I got compliments on my name pretty often.</p>
                     <p class="myStory meta">But unfortunately, that was not the case when I started going to high school in Minnesota. High school kids being high school kids, they made a joke out of my name saying things such as "oh she's on you."</p>
                     <p class="myStory meta">I was in a new country, a new school, using a new language. People making jokes out of my name instantly made me even more frustrated than I already was. So I decided to discuss it with my advisor, who brought me to talk to Mr. Simons, the Assistant Director of Student Life. We went to his office to discuss it and he says "You should get an English name."</p>
-                    <p class="myStory meta">So I took his advice. I tried for days to give myself an English name so can I can blend in with these American kids. But I just couldn't find an English name that I felt like myself in. So I just decided to go by OnYou, and I am so fucking glad that I didn't listen to Mr. Simons. </p>
+                    <p class="myStory meta">So I took his advice. I tried for days to give myself an English name so can I can blend in with these American kids. But I just couldn't find an English name that I felt like myself in. So I just decided to go by OnYou, and I am glad that I didn't listen to Mr. Simons. </p>
                     <p class="myStory meta">Back then, I didn't know how messed up this was for an "Assistant Director of Student Life" to tell a student with a non-western name to change the name that they lived with for their entire life to a western name. But I don't think he was aware of how a name can be a big part of people's identity for some individuals, including me.</p>
                     <p class="myStory meta">So here we are. </p>
-                    <p class="myStory meta">My Name is a web-based interactive project that displays the archive of people's story regarding the relationship between their names and identities. </p>
+                    <p class="myStory meta"><span class="title-italic">Hello, my name is</span> is a web-based interactive project that displays the archive of people's story regarding the relationship between their names and identities. </p>
                     <p class="myStory meta">I hope this project to prevent adults from being individuals who can tell others to change their name—or identity—so easily. And I hope the project to inspire everyone to realize the value of their names and love their names.</p>
                     <br>
                     <a href="archive.html"><p class="meta toArchiveButton">Go to Archive</p></a>
