--- a/mars.html
+++ b/mars.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, my name is</title>
+        <title>Hello, my name is Mars</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -32,18 +32,18 @@
                     <p class="meta two">Mars Kim</p>
                     <p class="meta three">Yunjoo—it is my Korean name</p>
                 </div>
-                <img class="downs" id="down" src="images/scroll-down.gif"> 
-                <img class="downs" id="down2" src="images/scroll-down.gif"> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to1">
                 <div class="content">
                     <p class="helvetica">I decided to go by ________ because _____________________________________<br>_______________________________________________________________________<br>_______.</p>
                     <p class="meta four">Mars</p>
                     <p class="meta five">my friend, Erik, gave it to me </p>
                     <p class="meta-2 six">when we were younger because he thought margaret was too long</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to2">
                 <div class="content special">
                     <p class="helvetica">My legal name was given by _______________, and they named me __________ because ___________________________________________.</p>
                     <p class="helvetica special">My name  does / does not  have a cultural background, and the cultural background of my name is ________________________________________________.</p>
@@ -57,14 +57,16 @@
                     <p class="meta thirteen">jeweled column</p>
                     <img class="circle" src="images/circle.png">
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: _________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">Well, I am the girl with many names. My Korean name is a 'physical' indicator of my Korean side and identity, which I feel very passionate about. My name Margaret is what I was baptized with and is an indicator of my Catholicism. Mars shows people that I can be fun and edgy, it's also something I like resonate with</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to4">
                 <div class="content">
 
                     <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: ___________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
@@ -72,16 +74,18 @@
                     <br>
                     <br>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to5">
                 <img class="arrows" id="hover" src="images/up.png">
                 <div class="content" id="container">
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">I used to go by Yunjoo in kindergarten, but people kept messing it up, so I switched to Margaret. In generally, it took me a while to find a name that I really resonated with. I went through alot of trial-and-error with names, such as Meg, Maggie and L M A O Mario. My identity was hard to find at first and as of now, it makes me so mad that people don't try to get not anglicised names, like these folks can pronounce Tchaikovsky, they can pronounce a simple Yunjoo <br><br></p>
                 </div>
-                <img class="arrows" id="hover2" src="images/down.png"> 
+                <img class="arrows" id="hover2" src="images/down.png">
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to6">
                 <div class="content">
                     <p class="helvetica">This is the story behind my name. What's your name?</p>
                     <a href="newStory.html"><p class="meta addStoryButton">Add your story</p></a>
