--- a/onyou.html
+++ b/onyou.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, my name is</title>
+        <title>Hello, my name is OnYou</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -33,18 +33,18 @@
                     <p class="meta two">OnYou Kang</p>
                     <p class="meta three">Wenrou</p>
                 </div>
-                <img class="downs" id="down" src="images/scroll-down.gif"> 
-                <img class="downs" id="down2" src="images/scroll-down.gif"> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span> 
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to1">
                 <div class="content">
                     <p class="helvetica">I decided to go by _________ because ____________________________________<br>______________________________________________________________________________________________________________________________.</p>
                     <p class="meta four">OnYou</p>
                     <p class="meta five">I don't like how there is a </p>
                     <p class="meta-2 six">space that divides my first name into two parts. So 'OnYou' is just a preferred way of spelling my given name</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to2">
                 <div class="content">
                     <p class="helvetica">My legal name was given by _______________, and they named me ___________ after _______________________________.</p>
                     <p class="helvetica">My name  does / does not  have a cultural background, and the cultural background of my name is __________.</p>
@@ -58,30 +58,34 @@
                     <p class="meta thirteen">warm and soft in Korean</p>
                     <img class="circle" src="images/circle.png">
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: ________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">My name is definitely a big part of my identity. I cannot ima-gine myself with another name and that is one of the reasons that I did not get a "western" name when I first started study-ing in the U.S. It is also a Biblical name, so it is a reminder of my religious belief and what kind of person my mom wanted me to grow up to</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page longer-1">
+            <div class="page" id="scroll-to4">
                 <div class="content">
                     <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: ____________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">In Korea, OnYou (온유) is perceived as a very unique and pretty name, so I always get a lot of complement regarding it. Here in the U.S., it is a great conversation starter because I get a chance to explain where my name comes from and what it means to me</p>
                     <br>
                     <br>
-                </div> 
+                </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to5">
                 <img class="arrows" id="hover" src="images/up.png">
                 <div class="content" id="container">
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: _________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">Lots. At this point, I am pretty used to all the jokes regarding my name. But it still bothers me when people jump to the conclusion that it would not be my real name. For instance, I had an Uber driver who felt a need for calling me 5 times before picking me up because she thought that my name is a joke. Another time, I wrote down my name to place an order for food and when I was picking up, the worker laughingly asked me why I put 'OnYou' on it <br><br></p>
                 </div>
                 <img class="arrows" id="hover2" src="images/down.png">
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to6">
                 <div class="content">
                     <p class="helvetica">This is the story behind my name. What's your name?</p>
                     <a href="newStory.html"><p class="meta addStoryButton">Add your story</p></a>
