--- a/rita.html
+++ b/rita.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, my name is</title>
+        <title>Hello, my name is Rita</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <link href="css/rita.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/rita.amr"></audio>
+        <audio id="my_audio" src="audio/rita.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
@@ -32,18 +32,18 @@
                     <p class="meta zero">Rita Verma</p>
                     <p class="meta three">Reets</p>
                 </div>
-                <img class="downs" id="down" src="images/scroll-down.gif"> 
-                <img class="downs" id="down2" src="images/scroll-down.gif"> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to1">
                 <div class="content">
                     <p class="helvetica">I decided to go by ______ because _______________________________________<br>________________________________.</p>
                     <p class="meta four">Rita</p>
                     <p class="meta five">it is the name that was given to me</p>
                     <p class="meta-2 six">at birth, and I stuck with it</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to2">
                 <div class="content">
                     <p class="helvetica">My legal name was given by _______________, and they named me after __________________.</p>
                     <p class="helvetica">My name  does / does not  have a cultural background. <!-- Cultural background of my name is ______________. --></p>
@@ -56,14 +56,16 @@
                     <p class="meta ten">Rita</p>
                     <p class="meta eleven">pearl</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to3">
                 <div class="content">
                     <p class="helvetica">This is how my name influences my identity: ___________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">I have a short name and it’s easy to pronounce which makes me feel approachable to most people. My name is classically feminine—and that’s the way I carry myself as well. Simple but classic</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to4">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
                 <div class="content" id="container">
                     <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: __________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
@@ -71,15 +73,17 @@
                     <br>
                     <br>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
                 <!-- <img class="arrows" id="hover2" src="images/down.png">  -->
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to5">
                 <div class="content">
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ______________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">When I was very young (7 or 8) a few times one kid called me retard—ie RITARD. It only happened once or twice but I still remember it. As an adult, nothing negative I can recall</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to6">
                 <div class="content">
                     <p class="helvetica">This is the story behind my name. What's your name?</p>
                     <a href="newStory.html"><p class="meta addStoryButton">Add your story</p></a>
