--- a/soa.html
+++ b/soa.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, my name is</title>
+        <title>Hello, my name is So A</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <link href="css/soa.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/soa.amr"></audio>
+        <audio id="my_audio" src="audio/soa.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
@@ -31,18 +31,18 @@
                     <p class="meta one">So A Ryu</p>
                     <p class="meta two">So A Ryu</p>
                 </div>
-                <img class="downs" id="down" src="images/scroll-down.gif"> 
-                <img class="downs" id="down2" src="images/scroll-down.gif"> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to1').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to1">
                 <div class="content">
                     <p class="helvetica">I decided to go by ______ because _______________________________________<br>___________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta four">So A</p>
                     <p class="meta five"> for me the meaning behind the </p>
                     <p class="meta-2 six">name felt like true calling of what I do—legacy my grandfa-ther passed to dad to me. My grandfather named me. He was a designer like me, just like how my dad is too. I have a tattoo of my name on my left arm—I think of it as a memo to keep me grounded in what I do. To take seriously of the art that I make</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to2').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to2">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
                 <div class="content">
                     <p class="helvetica">My legal name was given by ______________________, and they named me after _________.</p>
@@ -55,33 +55,37 @@
                     <img class="circle" src="images/circle.png">
                     <p class="meta fourteen">Korean</p>
                     <p class="meta twelve">So A</p>
-                    <p class="meta eleven">draw your dream on a big white canvas</p>                
+                    <p class="meta eleven">draw your dream on a big white canvas</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to3').scrollIntoView({behavior: 'smooth'});"><span></span></span>
                 <!-- <img class="arrows" id="hover2" src="images/down.png"> -->
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to3">
                 <img class="arrows" id="hover" src="images/up.png">
                 <div class="content" id="container">
                     <p class="helvetica">This is how my name influences my identity: _______________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 six">One time when I was living in Australia, I changed my name to Sue because Australians couldn't say my name as it should be pronounced (So Ah; they would pronounce it Sue Ah)—I didn't really think much into it. When I moved to America, I was given the choice again to be called whatever I wanted to. I knew with having a space and capitals in my name it would cause a lot of confusion and difficulties in legal documents, but I still wanted to be called who I am. I thought, people can take that extra second to learn my name and I won't apologize for having a name that might be confusing. I guess that was when I first seriously considered how I wanted to be perceived, what it meant for my self brand—who I am. Name is actually such an important part of who I am; it is the first thing someone learns about me and sometimes even before meeting me. My web domain is what it is because of that reasoning as well—I am proud of who I am and where I come from and my name is the first look into all that<br><br></p>
                 </div>
-                <img class="arrows" id="hover2" src="images/down.png">   
+                <img class="arrows" id="hover2" src="images/down.png"> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to4').scrollIntoView({behavior: 'smooth'});"><span></span></span> 
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to4">
                 <div class="content">
                     <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: _________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">With the uniquely spelled name I often have to correct people in the way they pronounce it or write it. In that couple minutes that person has learned more about me and given the time and effort to do so. The exchange are very short but gratifying</p>
                     <br>
                     <br>
                 </div> 
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to5').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to5">
                 <div class="content">
                     <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: __________________________________________________________________________________________________________________________________________________________.</p>
                     <p class="meta-2 nine">On the flip side, I do get annoyed when someone does not make the effort to say or write my name correctly—it's not that hard</p>
                 </div>
+                <span href="#scroll-to" class="arrow1" class="down2" onClick="document.getElementById('scroll-to6').scrollIntoView({behavior: 'smooth'});"><span></span></span>
             </div>
-            <div class="page">
+            <div class="page" id="scroll-to6">
                 <div class="content">
                     <p class="helvetica">This is the story behind my name. What's your name?</p>
                     <a href="newStory.html"><p class="meta addStoryButton">Add your story</p></a>
